# MCSanalysis

./: .gitignore  CMakeLists.txt  CompareMCSAnalyzer_module.cc  MCSAngleAnalysis_module.cc  compareMCSAnalyzer.fcl  mcsAngleAnalysis.fcl
protoduneana/singlephase/: CMakeLists.txt  ProtoDUNEBeamTPCRecoEfficiency_module.cc  ProtoDUNEFembFilter_module.cc  ProtoDUNETriggerFilter_module.cc  evd3apa.py
protoduneana/singlephase/Analysis/: CMakeLists.txt  PDSPAnalyzer.fcl  PDSPAnalyzer_module.cc  pduneana_Prod4_job.fcl
protoduneana/singlephase/EMTaskForce/: CMakeLists.txt  Cone.h  EMCNNCheck_module.cc  MichelTiming_module.cc  PiZeroProcess.h  ProtoDUNEPizeroAnaTree.fcl  ProtoDUNEPizeroAnaTree_module.cc  ProtoDUNEelectronAnaTree.fcl  ProtoDUNEelectronAnaTree_module.cc  ProtoDUNEelectronWireAna_module.cc  ShowerProcess.h  runProtoDUNEPizeroAnaTree.fcl  runProtoDUNEPizeroAnaTree_MC.fcl  runProtoDUNEelectronAnaTree.fcl  runProtoDUNEelectronWireAna.fcl  runProtoDUNEelectronWireAna_MC.fcl  runemcnncheck.fcl  runemcnncheck_data.fcl  runemcnncheck_mc.fcl
protoduneana/singlephase/EMTaskForce/macros/: AnalysisTree.cpp  AnalysisTree.h  doAna.cpp  include.h  makePaperPlotsCNN.C
protoduneana/singlephase/MCSanalysis/: .gitignore  BackTrackerAlg.cc  BackTrackerAlg.h  CMakeLists.txt  CompareMCSAnalyzer_module.cc  MCSAngleAnalysis_module.cc  MCSAngleCalculator.cxx  MCSAngleCalculator.h  MCSMomentumCalculator.cxx  MCSMomentumCalculator.h  MCSSegmentCalculator.cxx  MCSSegmentCalculator.h  OutputPositionInfo_module.cc  compareMCSAnalyzer.fcl  hunterSamplesToAnalyze.txt  hunterSamplesToAnalyzeKalman.txt  kalman.fcl  mcsAngleAnalysis.fcl  outputPositionInfo.fcl  pnfsSivaSamples.txt  quickbuild.sh  sivaSamplesToAnalyze.txt  xrootdSivaSamples.txt
protoduneana/singlephase/MCSanalysis/rootMacros/: .gitignore  (+7 more)
protoduneana/singlephase/MDMAna/: MDMAna_module.cc
protoduneana/singlephase/PhotonDetectors/: CMakeLists.txt
protoduneana/singlephase/Pion/: CMakeLists.txt  PionAbsCexSelection_module.cc  PionAnalyzer.fcl  PionAnalyzerMC.fcl  PionAnalyzerMC_module.cc  PionAnalyzer_module.cc  PionCrossSectionAnalyzer.fcl  PionCrossSectionAnalyzer_module.cc  PrimaryPionSelection.fcl  PrimaryPionSelection_module.cc  TruthAnalyzer.fcl  TruthAnalyzer_module.cc  pionana_5387_Prod3_job.fcl  pionana_Prod3_job.fcl  pionana_mc_job.fcl  pionana_mc_job_filter.fcl  pionana_mc_job_filter_primaryPion.fcl  pionana_mcc12_job.fcl  truthanalyzer_job.fcl
protoduneana/singlephase/T0Ana/: CMakeLists.txt  CRTMatchTrackCaloAna_module.cc  CheckCRT_module.cc  CheckT0_module.cc  T0RecoSCE_module.cc  runCRTTrackCaloAna.fcl
protoduneana/singlephase/XYZcalibration/: CMakeLists.txt
protoduneana/singlephase/diffusion/: hitrms.fcl  hitrms_module.cc  hitrmsrawdigits.fcl  hitrmsrawdigits_module.cc
protoduneana/singlephase/driftvel/: CMakeLists.txt  DriftAna_module.cc  driftana.fcl  driftvel_module.cc
protoduneana/singlephase/michelremoving/: CMakeLists.txt  filelisting.py  make_norm_csv.py  michelremoving.fcl  michelremoving_module.cc
protoduneana/singlephase/pionanalysis/: #pionanalysis_module.cc#  CMakeLists.txt  mcsXsection.fcl  mcsXsection_module.cc  pionanalysis.fcl  pionanalysis_module.cc
protoduneana/singlephase/pionanalysismc/: pionanalysismc_module.cc
protoduneana/singlephase/protonanalysis/: CMakeLists.txt  protonanalysis_module.cc  protonbeamana.fcl  protonbeamana_module.cc  protonmc.fcl  protonmc_module.cc  protonmccnn.fcl  protonmccnn_module.cc  protonmcnorw.fcl  protonmcnorw_module.cc
protoduneana/singlephase/truepion/: CMakeLists.txt  TrueEdep_module.cc  WireChgAna_module.cc  truepion_module.cc
protoduneana/singlephase/truepionXsection/: CMakeLists.txt  truepionXsection_module.cc
protoduneana/singlephase/velocity/: CMakeLists.txt  diffusioncathodet0.fcl  diffusioncathodet0_module.cc  hitrmsfinding.fcl  hitrmsfinding_module.cc  hitrmsraw.fcl  hitrmsraw_module.cc  velocity_module.cc
(+167 files in other folders)
