add_subdirectory(XYZcalibration)
add_subdirectory(michelremoving)
add_subdirectory(protonanalysis)
add_subdirectory(pionanalysis)
add_subdirectory(pionanalysismc)
add_subdirectory(truepionXsection)
add_subdirectory(truepion)
add_subdirectory(velocity)
add_subdirectory(driftvel)
add_subdirectory(Pion)
add_subdirectory(EMTaskForce)
add_subdirectory(T0Ana)
add_subdirectory(MDMAna)
add_subdirectory(PhotonDetectors)

#install(PROGRAMS evd3apa.py DESTINATION ${product}/${version}/python)
install_scripts()
